--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 resources:
 - repo: self
 
-variables:
+parameters:
   # ========================================================================
   #                          Mandatory variables 
   # ========================================================================
@@ -31,16 +31,17 @@ variables:
   # Docker Container port
   Container.Port: 80
 
+variables:
   # ========================================================================
   #                           Optional variables 
   # ========================================================================
 
-  ACR.RepositoryName: '$(ACR.Name)'
-  ACR.ImageName: '$(ACR.Name):$(Build.BuildId)'
-  ACR.FullName: '$(ACR.Name).azurecr.io'
+  ACR.RepositoryName: '${{ parameters.ACR.Name }}'
+  ACR.ImageName: '${{ parameters.ACR.Name }}:$(Build.BuildId)'
+  ACR.FullName: '${{ parameters.ACR.Name }}.azurecr.io'
   ACR.Sku: 'Standard'
   AKS.KubeDeploymentYaml: '$(System.DefaultWorkingDirectory)/KubeDeployment.yml' # Update AKS.KubeDeploymentYaml if you want to use deployment file from repo instead of generated file.
-  AKS.DeploymentPort: '$(Container.Port)'
+  AKS.DeploymentPort: '${{ parameters.Container.Port }}'
   Azure.CreateResources: 'true' # Update Azure.CreateResources to false if you have already created resources like resource group, azure container registry and azure kubernetes cluster.
   System.Debug: 'false'
 
@@ -57,13 +58,13 @@ jobs:
   - task: AzureResourceGroupDeployment@2
     displayName: 'Azure Deployment:Create ACR and AKS'
     inputs:
-      azureSubscription: '$(Azure.ServiceConnectionId)'
-      resourceGroupName: '$(Azure.ResourceGroupName)'
-      location: '$(Azure.Location)'
+      azureSubscription: '${{ parameters.Azure.ServiceConnectionId }}'
+      resourceGroupName: '${{ parameters.Azure.ResourceGroupName }}'
+      location: '${{ parameters.Azure.Location }} '
       templateLocation: 'URL of the file'
       addSpnToEnvironment: true
       csmFileLink: 'https://raw.githubusercontent.com/Microsoft/azure-pipelines-yaml/master/templates/resources/arm/aks.json'
-      overrideParameters: '-registryName "$(ACR.Name)" -registryLocation "$(Azure.Location)" -servicePrincipalId $servicePrincipalId -servicePrincipalKey $servicePrincipalKey -clusterName "$(AKS.ClusterName)" -clusterLocation "$(Azure.Location)"'
+      overrideParameters: '-registryName "${{ parameters.ACR.Name }}" -registryLocation "${{ parameters.Azure.Location }}" -servicePrincipalId $servicePrincipalId -servicePrincipalKey $servicePrincipalKey -clusterName "${{ parameters.AKS.ClusterName }}" -clusterLocation "${{ parameters.Azure.Location }}"'
 
 - job: BuildImage
   displayName: Build
@@ -77,7 +78,7 @@ jobs:
   - task: Docker@1
     displayName: 'Build an image'
     inputs:
-      azureSubscriptionEndpoint: '$(Azure.ServiceConnectionId)'
+      azureSubscriptionEndpoint: '${{ parameters.Azure.ServiceConnectionId }}'
       azureContainerRegistry: '$(ACR.FullName)'
       imageName: '$(ACR.ImageName)'
       command: build
@@ -86,7 +87,7 @@ jobs:
   - task: Docker@1
     displayName: 'Push an image'
     inputs:
-      azureSubscriptionEndpoint: '$(Azure.ServiceConnectionId)'
+      azureSubscriptionEndpoint: '${{ parameters.Azure.ServiceConnectionId }}'
       azureContainerRegistry: '$(ACR.FullName)'
       imageName: '$(ACR.ImageName)'
       command: push
@@ -142,8 +143,8 @@ jobs:
   - task: Kubernetes@1
     displayName: 'kubectl apply'
     inputs:
-      azureSubscriptionEndpoint: '$(Azure.ServiceConnectionId)'
-      azureResourceGroup: '$(Azure.ResourceGroupName)'
-      kubernetesCluster: '$(AKS.ClusterName)'
+      azureSubscriptionEndpoint: '${{ parameters.Azure.ServiceConnectionId }}'
+      azureResourceGroup: '${{ parameters.Azure.ResourceGroupName }}'
+      kubernetesCluster: '${{ parameters.AKS.ClusterName }}'
       arguments: '-f $(AKS.KubeDeploymentYaml)'
       command: 'apply'
