--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,14 +35,14 @@ variables:
   #                           Optional variables 
   # ========================================================================
 
-  ACR.RepositoryName: '${{ variables.ACR.Name }}'
-  ACR.ImageName: '${{ variables.ACR.Name }}:$(Build.BuildId)'
-  ACR.FullName: '${{ variables.ACR.Name }}.azurecr.io'
-  ACR.Sku: 'Standard'
-  AKS.KubeDeploymentYaml: '$(System.DefaultWorkingDirectory)/KubeDeployment.yml' # Update AKS.KubeDeploymentYaml if you want to use deployment file from repo instead of generated file.
-  AKS.DeploymentPort: '${{ variables.Container.Port }}'
-  Azure.CreateResources: 'true' # Update Azure.CreateResources to false if you have already created resources like resource group, azure container registry and azure kubernetes cluster.
-  System.Debug: 'false'
+  ACR.RepositoryName: $(ACR.Name)
+  ACR.ImageName: $(ACR.Name):$(Build.BuildId)
+  ACR.FullName: $(ACR.Name).azurecr.io
+  ACR.Sku: Standard
+  AKS.KubeDeploymentYaml: $(System.DefaultWorkingDirectory)/KubeDeployment.yml
+  AKS.DeploymentPort: $(Container.Port)
+  Azure.CreateResources: true
+  System.Debug: false
 
 jobs:
 - job: CreateResources
