--- a/charts/sampleapp/values.yaml
+++ b/charts/sampleapp/values.yaml
@@ -7,7 +7,7 @@ image:
   repository: VALUE_TO_BE_OVERRIDDEN
   tag: latest
 
-imagePullSecrets: []
+imagePullSecrets: ["docker-auth"]
   # Optionally specify an array of imagePullSecrets.
   # Secrets must be manually created in the namespace.
   # ref: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
