--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ stages:
   dependsOn: Build
   jobs:
   - deployment: Deploy
-    displayName: Deploy job
+    displayName: Deploy
     pool: $(poolName)
     environment: 'dsmsgoSampleApp.devdbff'
     strategy:
