--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ variables:
   imagePullSecret: 'desattiraksacr-auth'
 
   # Agent Pool Name
-  poolName: 'default'
+  poolName: 'Default'
 
 stages:
 - stage: Build
