--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
   jobs:  
   - job: Build
     displayName: Build job
-    pool: $(poolName)
+    pool: '$(poolName)'
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -48,7 +48,7 @@ stages:
   jobs:
   - deployment: Deploy
     displayName: Deploy
-    pool: $(poolName)
+    pool: '$(poolName)'
     environment: 'dsmsgoSampleApp.devdbff'
     strategy:
       runOnce:
