--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: sampleapp
+    name: e2esampleapp
 spec:
     type: LoadBalancer
     ports:
-    - port: 8080
+    - port: 80
     selector:
-        app: sampleapp
+        app: e2esampleapp
