--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,10 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
+      inputs:
+        containerRegistry: '51a5e1dc-da33-4fa5-9584-f6f2b5dc188b'
+        command: 'login'
+    - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
         command: buildAndPush
