--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
 variables:
 
   # Container registry service connection established during pipeline creation - Docker Hub/ACR/...
-  dockerRegistryServiceConnection: 'desattiraksacr1'
+  dockerRegistryServiceConnection: 'desattiraksacr'
   imageRepository: 'dsmsgosampleapp'
   containerRegistry: 'desattiraksacr.azurecr.io'
   dockerfilePath: '**/Dockerfile'
@@ -33,10 +33,6 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: Docker@2
-      inputs:
-        containerRegistry: '51a5e1dc-da33-4fa5-9584-f6f2b5dc188b'
-        command: 'login'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
