--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,10 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: 'manifests'
+        ArtifactName: 'drop'
 
 - stage: Deploy
   displayName: Deploy stage
@@ -56,6 +60,9 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: artifactDropDownloadTask@0
+            inputs:
+              destinationPath: '$(System.DefaultWorkingDirectory)\manifests'
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
             inputs:
