--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,17 +32,7 @@ stages:
     displayName: Build
     pool:
       vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-          
+    steps:          
     - task: PublishPipelineArtifact@0
       inputs:
         artifactName: 'manifests'
@@ -61,6 +51,10 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: DownloadPipelineArtifact@1	
+            inputs:	
+              artifactName: 'manifests'
+              
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
             inputs:
