--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,8 @@ stages:
           steps:
           - task: DownloadPipelineArtifact@1	
             inputs:	
-              artifactName: 'manifests'
+              artifactName: 'manifests'	
+              downloadPath: '$(System.ArtifactsDirectory)/manifests'
               
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
