--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ stages:
         displayName: Deploy to Kubernetes cluster
         inputs:
           action: deploy
+          kubernetesServiceConnection: desattiraks-dev9aa9
           manifests: $(bake.manifestsBundle)
           imagePullSecrets: |
             $(imagePullSecret)
