--- a/.github/workflows/deploytoContainerWebApp.yml
+++ b/.github/workflows/deploytoContainerWebApp.yml
@@ -15,24 +15,24 @@ jobs:
     - name: Create ACR
       id: create-acr
       run: |
-        az acr create -n rogoyalacr07 -g rogoyalacr07a0ad-rg --location "South Central US" --sku Standard --admin-enabled
-        echo "::set-output name=acr_username::`az acr credential show -n rogoyalacr07 --query username | xargs`"
-        echo "::set-output name=acr_password::`az acr credential show -n rogoyalacr07 --query passwords[0].value | xargs`"
+        az acr create -n rogoyalacr007 -g rogoyalacr007a0ad-rg --location "South Central US" --sku Standard --admin-enabled
+        echo "::set-output name=acr_username::`az acr credential show -n rogoyalacr007 --query username | xargs`"
+        echo "::set-output name=acr_password::`az acr credential show -n rogoyalacr007 --query passwords[0].value | xargs`"
         # echo "::add-mask::`az acr credential show -n rogoyalacr07 --query passwords[0].value | xargs`"
     
     - uses: azure/docker-login@v1
       with:
-        login-server: rogoyalacr07.azurecr.io
-        username: ${{ steps.create-acr.outputs.acr_username }}
-        password: ${{ steps.create-acr.outputs.acr_password }}
+        login-server: rogoyalacr007.azurecr.io
+        username: 49b90a77-048d-4b8b-a828-322bc1d58216
+        password: G%;i9:LGb(b]2L2;L%*6fVyY9AGn6;X6>FBT1NnP
     
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t rogoyalacr07.azurecr.io/rogoyalwebappnewacr-img:${{ github.sha }}
-        docker push rogoyalacr07.azurecr.io/rogoyalwebappnewacr-img:${{ github.sha }}
+        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t rogoyalacr007.azurecr.io/rogoyalwebappnewacr-img:${{ github.sha }}
+        docker push rogoyalacr007.azurecr.io/rogoyalwebappnewacr-img:${{ github.sha }}
       
     - uses: azure/webapps-deploy@v2
       with:
         app-name: rogoyal-webapp-newACR
-        images: rogoyalacr07.azurecr.io/rogoyalwebappnewacr-img:${{ github.sha }}
+        images: rogoyalacr007.azurecr.io/rogoyalwebappnewacr-img:${{ github.sha }}
