--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,25 +12,25 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Create ACR
-      id: create-acr
-      run: |
-        az acr create -n rogoyalacrtest -g rogoyalacrnew8361-rg --location "South Central US" --sku Standard --admin-enabled
-        echo "::set-output name=acr_username::`az acr credential show -n rogoyalacrtest --query username | xargs`"
-        echo "::set-output name=acr_password::`az acr credential show -n rogoyalacrtest --query passwords[0].value | xargs`"
-        # echo "::add-mask::`az acr credential show -n rogoyalacrnew --query passwords[0].value | xargs`"
+#     - name: Create ACR
+#       id: create-acr
+#       run: |
+#         az acr create -n rogoyalacrtest -g rogoyalacrnew8361-rg --location "South Central US" --sku Standard --admin-enabled
+#         echo "::set-output name=acr_username::`az acr credential show -n rogoyalacrtest --query username | xargs`"
+#         echo "::set-output name=acr_password::`az acr credential show -n rogoyalacrtest --query passwords[0].value | xargs`"
+#         # echo "::add-mask::`az acr credential show -n rogoyalacrnew --query passwords[0].value | xargs`"
     
     - uses: azure/docker-login@v1
       with:
         login-server: rogoyalacrtest.azurecr.io
-        username: ${{ steps.create-acr.outputs.acr_username }}
-        password: ${{ steps.create-acr.outputs.acr_password }}
+        username: rogoyalacrtest
+        password: uCTVRIQ8=9tzF0CsbWy5qQmB27oJlZDo
     
-    - name: Build and push image to ACR
-      id: build-image
-      run: |
-        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t rogoyalacrtest.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
-        docker push rogoyalacrtest.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
+#     - name: Build and push image to ACR
+#       id: build-image
+#       run: |
+#         docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t rogoyalacrtest.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
+#         docker push rogoyalacrtest.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
       
     - uses: azure/webapps-deploy@v2
       with:
