--- a/.github/workflows/deploytoContainerWebApp-1.yml
+++ b/.github/workflows/deploytoContainerWebApp-1.yml
@@ -12,27 +12,27 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Create ACR
-      id: create-acr
-      run: |
-        az acr create -n rogoyalsomeacr -g rogoyalsomeacraa80-rg --location "South Central US" --sku Standard --admin-enabled
-        echo "::set-output name=acr_username::`az acr credential show -n rogoyalsomeacr --query username | xargs`"
-        echo "::set-output name=acr_password::`az acr credential show -n rogoyalsomeacr --query passwords[0].value | xargs`"
-        # echo "::add-mask::`az acr credential show -n rogoyalsomeacr --query passwords[0].value | xargs`"
+#     - name: Create ACR
+#       id: create-acr
+#       run: |
+#         az acr create -n rogoyalsomeacr -g rogoyalsomeacraa80-rg --location "South Central US" --sku Standard --admin-enabled
+#         echo "::set-output name=acr_username::`az acr credential show -n rogoyalsomeacr --query username | xargs`"
+#         echo "::set-output name=acr_password::`az acr credential show -n rogoyalsomeacr --query passwords[0].value | xargs`"
+#         # echo "::add-mask::`az acr credential show -n rogoyalsomeacr --query passwords[0].value | xargs`"
     
     - uses: azure/docker-login@v1
       with:
         login-server: rogoyalsomeacr.azurecr.io
-        username: ${{ steps.create-acr.outputs.acr_username }}
-        password: ${{ steps.create-acr.outputs.acr_password }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
     
-    - name: Build and push image to ACR
-      id: build-image
-      run: |
-        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t rogoyalsomeacr.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
-        docker push rogoyalsomeacr.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
+#     - name: Build and push image to ACR
+#       id: build-image
+#       run: |
+#         docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t rogoyalsomeacr.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
+#         docker push rogoyalsomeacr.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
       
     - uses: azure/webapps-deploy@v2
       with:
         app-name: rogoyal-test-webapp
-        images: rogoyalsomeacr.azurecr.io/rogoyaltestwebapp-img:${{ github.sha }}
+        images: rogoyalsomeacr.azurecr.io/rogoyaltestwebapp-img:94e5447d33279edfb53d8887e2d8524b0735118b
