--- a/.github/workflows/deploytoContainerWebApp.yml
+++ b/.github/workflows/deploytoContainerWebApp.yml
@@ -45,7 +45,7 @@ jobs:
             },
             {
               "name": "DOCKER_REGISTRY_SERVER_URL",
-              "value": testacrrogoyal.azurecr.io,
+              "value": "testacrrogoyal.azurecr.io",
               "slotSetting": false
             },
             {
