--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Create ACR
       id: create-acr
       run: |
-        az acr create -n rogoyalarc -g rogoyal --location "southcentralus" --sku Basic --admin-enabled
+        az acr create -n rogoyalacr -g rogoyal --location "southcentralus" --sku Basic --admin-enabled
         echo "::set-output name=acr_username::`az acr credential show -n rogoyalacr --query username | xargs`"
         echo "::set-output name=acr_password::`az acr credential show -n rogoyalacr --query passwords[0].value | xargs`"
         echo "::add-mask::`az acr credential show -n rogoyalacr --query passwords[0].value | xargs`"
